--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.2"
   }
 }
