--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
+    "next": "^13.4.12",
     "postcss": "8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.63.6",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.2"
